lib_LTLIBRARIES= libptk.la
libptk_la_SOURCES= bitmap.cc bitmap.h border.cc border.h color.cc color.h config.h console.cc \
	console.h dim.cc dim.h display.cc display.h drawer.h \
	drv_color.cc drv_display.cc drv_embed.cc drv_font.cc \
	embed.cc embed.h font.cc font.h \
	frame.cc frame.h hardware.h image.cc image.h keyboard.cc keyboard.h \
	layout.cc layout.h layout.txt msg.cc msg.h msgbase.h plane.cc \
	plane.h pointer.cc pointer.h ptk.cc ptk.h stdtext.cc stdtext.h \
	tree.cc tree.h \
	windowdrawer.cc windowdrawer.h wmshell.cc wmshell.h
