lib_LTLIBRARIES = libptktoolkit.la
libptktoolkit_la_SOURCES = tkAlert.cc tkButton.cc tkClickLabel.cc \
	tkEditString.cc tkInputField.cc tkLabel.cc tkMenu.cc tkPanel.cc \
	tkScrollBar.cc tkScrollBarBase.cc tkScrollField.cc \
	tkScrollFieldBase.cc tkSeparator.cc tkTextButton.cc tkTree.cc \
	tkWindow.cc toolkit.cc
libptktoolkit_la_CPPFLAGS = -I../ptk
